--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,32 @@
     align-items: center;
 }
 
+#luz {
+    animation: fadein 2s ease forwards;
+    opacity: 0;
+}
+
+#camara {
+    animation: fadein 2s ease forwards;
+    opacity: 0;
+    animation-delay: .5s;
+}
+
+#critica {
+    animation: fadein 2s ease forwards;
+    opacity: 0;
+    animation-delay: 1s;
+}
+
+@keyframes fadein{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+}
+
 .brand-logo {
     width: 5em;
 }
@@ -496,4 +522,86 @@ main {
     text-align: center;
     font-size: 20px;
     color: white;
+}
+
+/********** REGISTRO ***********/
+
+.body-content-registro {
+    background-image: url(/img/acercade/background-collage-portait.jpg.png);
+    background-size: cover;
+    color: rgb(161, 161, 161)
+    
+}
+
+.main-content-registro {
+    height: 86vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.formulario{
+    background-color: #333d;
+    border-radius: 15px;
+    box-shadow: 0 0 15px 3px rgba(255, 255, 255, 0.5);;
+    padding: 20px 10px ;
+}
+
+.formulario h2{
+    text-align: center;
+    color: #f8f8f8;
+    padding-bottom: 20px;
+    font-weight: 600;
+}
+
+.formulario h3{
+    font-size: 1em;
+    margin-left: 10px;
+    margin-top: 40px;
+    line-height: 0;
+    font-weight: bold;
+}
+
+input {
+    background:none;
+    color: white;
+    border: none;
+    border-bottom: 1px solid #8b8b8b63;
+    outline: 0;
+}
+
+label {
+    text-align: justify;
+    margin: 10px 10px;
+    
+}
+
+.boton_registro {
+    background-color: #8b8b8b9c;
+    padding: 5px;
+    border-radius: 5px;
+    border: 2px #cacaca outset;
+    color: #cacaca; 
+    transition: all .5s ease;
+    box-shadow: 0 8px 16px 0 #333d;
+}
+
+.div-boton-registro{
+    display: flex;
+    justify-content: center;   
+}
+
+.boton_registro:hover{
+    background-color: #575757;
+    color: white;
+}
+
+.formulario textarea{
+    width: 100%;
+    background-color: rgba(139, 139, 139, 0.13);
+    border-color: #8b8b8b;
+    border-radius: 6px;
+    color: rgb(255, 255, 255);
 }
