--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@
     padding-top: .5em;      /* cambió margin por padding para que no afecte al background-color */
     /* margin-left: auto; */
     /* margin-right: auto; */
-    background-color: #000c;    /* agrego para diferenciarlo en las paginas con background-image*/
+    background-color: #0008;    /* agrego para diferenciarlo en las paginas con background-image*/
 }
 
 .brand {
@@ -487,22 +487,35 @@ main {
     color: white;
     text-align: center;
     font-size: 20px;
+
+    background-color: rgba(0, 0, 0, 0.527);
+    padding: 30px;
+    border-radius: 15px;
     
 }
 
+.about {
+    background-image: url(../img/acercade/movie-background-collage.jpg.png);
+    background-size: cover;
+}
 
-
-
-
-
-
+.image-container {
+    overflow: hidden;
+}
 
 .image-container img {
     max-width: 100%;
     height: auto;
     vertical-align: middle;
     display: inline-block;
+    
+    transition: all 2.5s ease-out;
 }
+
+.image-container img:hover{
+    transform: scale(1.4);
+}
+
 .gallery {
     display: grid;
     grid-gap: 10px;
