--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
     background-color: rgb(0, 0, 0);
 }
 
-/* Header */
+/*************** Header ****************/
 
 .header {
     width: 100%;
@@ -16,12 +16,8 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-    /* margin-bottom: 1em; */
     padding-bottom: .5em; 
-    /* margin-top: 1em; */
     padding-top: .5em;      /* cambió margin por padding para que no afecte al background-color */
-    /* margin-left: auto; */
-    /* margin-right: auto; */
     background-color: #0008;    /* agrego para diferenciarlo en las paginas con background-image*/
 }
 
@@ -67,7 +63,7 @@
 
 .brand-name a {
     text-decoration: none;
-    color: white;
+    color: white;  
 }
 
 .menu {
@@ -96,7 +92,7 @@
 
 /* Fin Header */
 
-/* Main */
+/***************** Main *****************/
 
 .main-content {
     width: 100%;
@@ -105,11 +101,14 @@
 }
 
 .peliculas, .series {
+    margin: 0 auto;
+    width: 98%;
     margin-top: 3em;
     background-color: rgba(51, 51, 51, 0.199);
     margin-bottom: 2em;
     box-shadow: 0 0 20px 1px rgba(255, 255, 255, 0.473);
     border-radius: 10px;
+/*lo que sigue es para la pagina series porque comparten la clase */
     color: white;
     text-align: center;
 }
@@ -122,12 +121,21 @@
     font-size: 3em;
 }
 
+.grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(min(270px,100%),1fr));
+    grid-auto-flow: dense;
+    gap: 1em;
+    padding: 0 10px;
+}
+
 .card {
     margin-bottom: 1em;
     margin-right: auto;
     margin-left: auto;
     position: relative;
     overflow: hidden;
+    width: 17rem;  
     /* margin-bottom: 20px; */
 }
 
@@ -266,210 +274,19 @@ footer {
 
 /* Fin Footer */
 
-
-@media all and (min-width:770px) and (max-width:992px){
-    
-    
-}
-
-@media (max-width:770px) {
-
-    /* Header */
-
-    .header {
-        width: 100%;
-    }
-
-    .brand-logo {
-        width: 4em;
-    }
-    
-    .brand-name {
-        font-family: "Oswald", sans-serif;
-        font-size: 80%;
-    }
-    
-    .brand-name a {
-        text-decoration: none;
-        color: rgb(255, 255, 255);
-    }
-    
-    .menu {
-        width: auto;
-    }
-    .banner{
-        width: 100%;
-    }
-    .banner1{
-        width: 100%;
-    }
-    .menu ul li a {
-        padding: .6em;
-        font-size: 80%;
-    }
-
-    /* Fin Header */
-
-    /* Main */
-
-.main-content {
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-main {
-    width: 100%;
-    margin-right: auto;
-    margin-left: auto;
-}
-
-.peliculas, .series {
-    margin-top: 3em;
-    width: 90%;
-    background-color: rgba(51, 51, 51, 0.199);
-    margin-bottom: 2em;
-    box-shadow: 0 0 20px 1px rgba(255, 255, 255, 0.473);
-    border-radius: 30px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.peliculas h3, .series h3{
-    color: white;
-    width: 560px;
-    padding-top: 1em;
-    padding-bottom: 1em;
-}
-
-.peliculas h3, .series h3 {
-    text-align: center;
-    font-size: 3em;
-}
-
-.card-img-top {
-    width: 100%;  /* Asegura que la imagen cubra todo el ancho del contenedor */
-    height: 400px;  /* Altura fija para todas las imágenes */
-    object-fit: cover;  /* Asegura que las imágenes se redimensionen y recorten de manera adecuada */
-}
-
-.card-body {
-    height: 6em;
-}
-
-.card-text {
-    font-weight: bold;
-    text-align: center;
-}
-
-.card {
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.card :hover {
-    background-color: rgb(170, 170, 170);
-}
-
-.card a {
-    text-decoration: none;
-    color: rgb(0, 0, 0);
-}
-
-/* Fin Main */
-
-
-    /* Footer */
-
-    footer {
-        width: 580px;
-    }
-    
-    /* Fin Footer */
-
-}
-
-@media (min-width: 768px) and (max-width: 992px) {
-
-    /* Header */
-
-    .header {
-        width: 90%;
-        display: flex;
-        flex-wrap: wrap;
-    }
-    .banner{
-        width: 100%;
-    }
-    .banner1{
-        width: 100%;
-    }
-
-    .brand {
-        margin-left: auto;
-        margin-right: auto;
+@media screen and (width<600px) {
+    .peliculas h3 {
         font-size: 2em;
     }
 
+    .brand-name a {
+        font-size: 1em;
+    }
+
     .brand-logo {
-        width: 3em;
+        width: 3.5em;
     }
-
-    .brand-name {
-        font-size: 90%;
-        width: 90%;
-    }
-
-    .menu {
-        margin-top: 1em;
-    }
-
-    .menu ul {
-        width: 100%;
-        padding: 0;
-        margin: 0;
-    }
-
-    .menu ul li {
-        width: 100%;
-    }
-
-    .menu ul li a {
-        font-size: 1.2em;
-        width: 100%;
-        text-align: center;
-
-    }
-    /* Fin Header */
-
-    /* Main */
-
-    .main-content {
-        width:90%;
-    }
-
-    main {
-        width: 90%;
-        margin-right: auto;
-        margin-left: auto;
-    }
-
-    /* Fin Main */
-
-    /*Footer*/
-
-    footer {
-        width: 90%;
-        flex-direction: column;
-    }
-
-    .legal p, .legal a, .redes p, .redes a {
-        font-size: 90%;
-    }
-    /*Fin Footer*/
-
 }
-
 
 
 
@@ -565,7 +382,6 @@ main {
 }
 
 .main-content-registro {
-    /* height: 86vh; */
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -607,6 +423,7 @@ main {
     color: #f8f8f8;
     padding-bottom: 20px;
     font-weight: 600;
+    text-shadow: 1px 1px 2px #000;
 }
 
 .formulario h3{
@@ -643,16 +460,18 @@ label {
     color: #cacaca; 
     transition: all .5s ease;
     box-shadow: 0 8px 16px 0 #333d;
+    text-shadow: 0 1px 1px #111;  
 }
 
 .div-boton-registro{
     display: flex;
-    justify-content: center;   
+    justify-content: center; 
 }
 
 .boton_registro:hover{
     background-color: #575757;
     color: white;
+    
 }
 
 .formulario textarea{
@@ -668,15 +487,13 @@ table {
 }
 
 td {
-    /* border: 1px solid red; */
     margin: 0;
-    padding: 7px 3px;
+    padding: 7px 5px;
     vertical-align: top;
 }
 
 td#bd {
     vertical-align: bottom;
-    padding: 0 5px;
     line-height: 1;
 }
 
