--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,15 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
+}
+
+body{
+    font-family: "Open Sans", sans-serif;
+}
+
+a {
+    color: rgb(201, 201, 201)
 }
 
 .body-content {
@@ -16,7 +25,7 @@
     position: sticky;
     top: 0;
     left: 0;
-    z-index: 9999;
+    z-index: 1;
 }
 
 nav {
@@ -62,7 +71,7 @@ nav {
     width: 5em;
 }
 
-.brand-name {
+.brand-name a{
     font-family: "Oswald", sans-serif;
     font-size: 1.5em;
     color: rgb(255, 255, 255);
@@ -162,6 +171,11 @@ nav {
     font-size: 3em;
 }
 
+.main-header {
+    font-size: 2em;
+    padding: 1em 0;    
+}
+
 .grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(min(270px,100%),1fr));
@@ -199,6 +213,8 @@ nav {
     font-size:15px;
     text-align: center;
     font-weight: bold;
+    color: #fff;
+    padding-top: 5px;
 }
 
 
@@ -253,7 +269,7 @@ nav {
 
 .card a {
     text-decoration: none;
-    color: rgb(0, 0, 0);
+    /* color: rgb(0, 0, 0); */
 }
 .banner img{
     width:100%;
@@ -271,7 +287,7 @@ nav {
 footer {
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 1em;
+    padding-bottom: 1em;
     display: flex;
     justify-content: space-evenly;
     border-top: 1px solid rgb(170, 170, 170);
@@ -463,7 +479,7 @@ footer {
 
 
 
-.acercaDe h4{
+.acercaDe h2{
     color: white;
     margin-left: 60px;
     margin-top: 80px;
@@ -592,15 +608,14 @@ footer {
     text-align: center;
     color: #f8f8f8;
     padding-bottom: 20px;
-    font-weight: 600;
+    font-weight: 300;
     text-shadow: 1px 1px 2px #000;
 }
 
 .formulario h3{
     font-size: 1em;
-    margin-left: 10px;
-    margin-top: 40px;
-    line-height: 0;
+    margin: 20px 0 10px;
+    line-height: 1;
     font-weight: bold;
 }
 
@@ -620,6 +635,11 @@ tr input {
 label {
     margin: 10px 10px;
     
+}
+
+select {
+    padding: 5px;
+    border-radius: 5px;
 }
 
 .boton_registro {
@@ -674,12 +694,12 @@ td#bd {
 
 #div_calificacion {
     text-align: center;
+    margin-top: 40px;
 }
 
 select {
     background-color: #575757;
     color: #cacaca;
-    margin-top: 15px;
 }
 
 option:disabled {
