--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,7 @@ nav {
     color: rgb(174, 174, 174);
     padding: .8em;
     font-size: 1em;
+    text-wrap: nowrap;
 }
 
 .nav_links a:hover {
@@ -158,7 +159,6 @@ nav {
     margin-bottom: 2em;
     box-shadow: 0 0 20px 1px rgba(255, 255, 255, 0.473);
     border-radius: 10px;
-/*lo que sigue es para la pagina series porque comparten la clase */
     color: white;
     text-align: center;
 }
@@ -171,21 +171,27 @@ nav {
     font-size: 3em;
 }
 
-.main-header {
-    font-size: 2em;
-    padding: 1em 0;    
+.series h2 {
+    font-size: 3em;
+    padding-top: 1em;
+}
+
+.main-header p {
+    font-size: 1.5em;
+    padding-bottom: 2em;    
 }
 
 .grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(min(270px,100%),1fr));
-    grid-auto-flow: dense;
+    grid-template-columns: repeat(auto-fit, minmax(min(270px,100%),1fr));
+    /* grid-auto-flow: dense; */
     gap: 1em;
     padding: 0 10px;
+    align-content: center;
 }
 
 .card {
-    margin-bottom: 1em;
+    /* margin-bottom: 1em; */
     margin-right: auto;
     margin-left: auto;
     position: relative;
@@ -235,7 +241,7 @@ nav {
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: rgba(252, 5, 5, 0.944); /* Fondo oscuro semitransparente */
+    background-color: rgba(100, 0, 0, 0.9); /* Fondo oscuro semitransparente */
     color: white;
     opacity: 0; /* Por defecto, el overlay está oculto */
     transition: opacity 0.5s; /* Transición suave para la opacidad */
@@ -243,8 +249,8 @@ nav {
 .overlay-text {
     color: #faf8f8;
     font-size: 0.8rem;
-    font-weight: bold;
-    text-align: center;
+    /* font-weight: bold; */
+    text-align: justify;
     padding: 10px;
     margin-bottom: 5px;
     transform: translateY(100%); /* Inicialmente oculto debajo */
@@ -336,7 +342,7 @@ footer {
 
 /* Fin Footer */
 
-@media (min-width: 769px) and (max-width: 1024px) {
+@media (min-width: 811px) and (max-width: 1024px) {
     .nav_links {
         gap: 8px; /* Ajusta el espacio entre elementos <li> */
     }
@@ -350,23 +356,48 @@ footer {
     }
 
     .nav_links a:hover {
-        background-color: rgb(174, 174, 174); /* Cambia el color de fondo en hover */
+        /* background-color: rgb(174, 174, 174); Cambia el color de fondo en hover */
         border-radius: 5px; /* Redondea un poco los bordes */
-        color: rgb(255, 255, 255); /* Cambia el color del texto en hover */
+        /* color: rgb(255, 255, 255); Cambia el color del texto en hover */
     }
 
     .brand-logo {
-        width: 3em;
+        /* width: 3em; */
     }
     
     .brand-name {
-        font-family: "Oswald", sans-serif;
-        font-size: .8em;
-        color: rgb(255, 255, 255);
+        /* font-size: .8em; */
+
+    }
+    
+    .peliculas h3, .series h3{
+        font-size: 2.5em;
+    }
+    
+    .series h2 {
+        font-size: 2.5em;
+    }
+    
+    .main-header p {
+        font-size: 1.3em;
+        padding-bottom: 2em;    
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 810px) {
+
+    .peliculas h3, .series h3{
+        font-size: 2em;
+    }
+
+    .series h2 {
+        font-size: 2em;
+    }
+    
+    .main-header p {
+        font-size: 1em;
+        padding-bottom: 2em;    
+    }
 
     .desktop_nav {
         display: none;
@@ -411,11 +442,29 @@ footer {
         margin: 5px 10px;
     }
 
+    .grid {
+        grid-template-columns: repeat(auto-fit, minmax(min(200px,100%),1fr));
+        grid-template-rows: repeat(auto-fit, minmax(177px,1fr));
+        grid-auto-flow: dense;
+    }
+
+    .card {
+        width: 12rem;
+    }
+
+    .overlay-text {
+        font-size: .7em;
+    }
+
+    .card-img-top {
+        height: 300px;  /* Altura fija para todas las imágenes */
+    }
+
 }
 
 @media (max-width: 480px) {
 
-    .desktop_nav {
+    /* .desktop_nav {
         display: none;
     }
 
@@ -427,7 +476,7 @@ footer {
 
     .menu_toggle_icon {
         display: block;
-    }
+    } */
 
     .peliculas h3 {
         font-size: 2em;
@@ -477,20 +526,25 @@ footer {
 
 /* ************************************pagina acerda de****************************************** */
 
-
+.acercaDe {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+}
 
 .acercaDe h2{
     color: white;
-    margin-left: 60px;
+    /* margin-left: 60px; */
     margin-top: 80px;
     text-align: center;
 }
 .acerca{
-    margin: 50px 30px 160px 50px;
+    margin: 0 20px 160px;
     color: white;
-    text-align: center;
+    text-align: justify;
     font-size: 20px;
-
+    max-width: 1200px;
     background-color: rgba(0, 0, 0, 0.527);
     padding: 30px;
     border-radius: 15px;
@@ -528,31 +582,38 @@ footer {
     grid-auto-flow: dense;
     margin: 10px 20px 60px 20px;
 }
-.gallery > div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.gallery > div > img {
+
+.gallery img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 5px;
 }
-.gallery .tall {
+.tall {
     grid-row: span 2;
+}
+
+.wide {
+    grid-column: span 2;
 }
 
 
 .estudiantes{
     text-align: center;
-    font-size: 20px;
+    font-size: 22px;
     color: white;
 }
 
 @media screen and (width<800px){
     .acerca {
         font-size: 1em;
+    }
+    .estudiantes {
+        font-size: 18px;
+    }
+    .gallery{
+        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+        grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
     }
 }
 
