--- a/css/style.css
+++ b/css/style.css
@@ -191,7 +191,7 @@ nav {
 }
 
 .card {
-    /* margin-bottom: 1em; */
+    margin-bottom: 1em;
     margin-right: auto;
     margin-left: auto;
     position: relative;
@@ -201,33 +201,33 @@ nav {
 }
 
 .card-img-top {
-    width: 100%;  /* Asegura que la imagen cubra todo el ancho del contenedor */
-    height: 400px;  /* Altura fija para todas las imágenes */
-    object-fit: cover;  /* Asegura que las imágenes se redimensionen y recorten de manera adecuada */
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
 }
 
 .card-body {
-    height: 6em;
+    height: 6.5em;
     margin-bottom: -20px;
+    padding: 10px;
 }
 
 .card-title{
     font-weight: bold;
     text-align: center;
 }
+
 .card-text{
-    font-size:15px;
+    font-size:14px;
     text-align: center;
     font-weight: bold;
-    color: #fff;
-    padding-top: 5px;
 }
-
 
 /* .card {
     margin-left: auto;
     margin-right: auto;
 } */
+
 /* Estilo para el overlay */
 
 .sinopsis{
@@ -241,42 +241,56 @@ nav {
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: rgba(100, 0, 0, 0.9); /* Fondo oscuro semitransparente */
+    background-color: rgba(252, 5, 5, 0.944);
     color: white;
-    opacity: 0; /* Por defecto, el overlay está oculto */
-    transition: opacity 0.5s; /* Transición suave para la opacidad */
+    opacity: 0;
+    transition: opacity 0.5s;
 }
+
 .overlay-text {
     color: #faf8f8;
     font-size: 0.8rem;
-    /* font-weight: bold; */
-    text-align: justify;
+    font-weight: bold;
+    text-align: center;
     padding: 10px;
     margin-bottom: 5px;
     transform: translateY(100%); /* Inicialmente oculto debajo */
     transition: transform 0.3s ease; /* Animación de transición */
     margin-top: 10px;
+    overflow: auto;
+    max-height: 400px;
+    box-sizing: border-box;
+
 }
+
+/* Ocultar la barra de desplazamiento en navegadores WebKit */
+.overlay-text::-webkit-scrollbar {
+    display: none;
+}
+
+/* Ocultar la barra de desplazamiento en navegadores Firefox */
+.overlay-text {
+    scrollbar-width: none; /* Oculta la barra de desplazamiento en Firefox */
+    -ms-overflow-style: none; /* Oculta la barra de desplazamiento en IE y Edge */
+}
+
 /* Estilo para mostrar el overlay cuando se pasa el ratón sobre la imagen */
+
 .card:hover .overlay {
-    opacity: 1; /* Mostrar el overlay al pasar el ratón */
+    opacity: 1; /* Mostrar el overlay al pasar el mouse */
 }
 
 .card:hover .overlay-text {
     transform: translateY(0); /* Mostrar texto personalizado al hacer hover en la tarjeta */
-}
-
-
-
-
-/* .card :hover {
+}/* .card :hover {
     background-color: rgb(170, 170, 170);
 } */
 
 .card a {
     text-decoration: none;
-    /* color: rgb(0, 0, 0); */
+    color: rgb(0, 0, 0);
 }
+
 .banner img{
     width:100%;
     border-radius: 3px;
